Removed source path for image

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <table cellspacing="20">
             <tr>
-                <td><img src="images/Lydia-modified.png" alt="Lydia" height="200" width="200"></td>
+                <td><img src="Lydia-modified.png" alt="Lydia" height="200" width="200"></td>
                 <td> <h1>Lydia Loughran</h1>
                     <p><em>Group Product Manager</em><strong> <a href="https://www.linkedin.com/in/lydialoughran/">at Sainsbury's Digital & Technology</a></strong></p>
                     <p>I am a Group Product Manager at Sainsbury's Digitial & Technology.
